--- a/production/imports/ui/pages/firstTime.html
+++ b/production/imports/ui/pages/firstTime.html
@@ -48,6 +48,7 @@
                                 <div class="info-form" id="subscriptionEmail" hidden>
                                     <form class="form">
                                         <input type="email" placeholder="Your Email">
+                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else or spam you. Read more about our privacy policy.</small>
                                         <input type="submit" class="btn btn-primary btn-lg btn-login mb-15" value="Join the club">
                                         <span>No, I do not want weekly briefing, please <a href="" id="skipEmail">skip</a></span>
                                     </form>
