--- a/mobile/imports/ui/pages/home.html
+++ b/mobile/imports/ui/pages/home.html
@@ -13,13 +13,16 @@
                         <div class="card__content card__padding">
 
                             <div class="card-meta">
-                                <a href="/newsDetail">Admin</a>
-                                <time>17th March</time>
+                                <time>{{shortenDate}}</time>
                             </div>
 
                             <article class="card__article">
                                 <h2>
-                                    <a href="/newsDetail">{{title}}</a>
+                                    <p href="/newsDetail" class="home-title">{{title}}</p>
+                                    <p class="home-subtitle">{{subtitle}}</p>
+                                    {{#if checkContent}}
+                                        <a href="/newsDetail" class="home-link">Read More</a>
+                                    {{/if}}
                                 </h2>
                             </article>
                         </div>
@@ -32,6 +35,9 @@
                             <div class="card__image border-tlr-radius">
                                 <img src="http://lorempixel.com/400/200/sports/" alt="image" class="border-tlr-radius">
                             </div>
+                            <div class="card-meta">
+                                <time>{{shortenDate}}</time>
+                            </div>
                         </div>
                     </div>
                 {{else}}
@@ -42,13 +48,16 @@
                                 <div class="card__content card__padding">
 
                                     <div class="card-meta">
-                                        <a href="/newsDetail">Admin</a>
-                                        <time>17th March</time>
+                                        <time>{{shortenDate}}</time>
                                     </div>
 
                                     <article class="card__article">
                                         <h2>
-                                            <a href="/newsDetail">{{title}}</a>
+                                            <p href="/newsDetail" class="home-title">{{title}}</p>
+                                            <p class="home-subtitle">{{subtitle}}</p>
+                                            {{#if checkContent}}
+                                                <a href="/newsDetail" class="home-link">Read More</a>
+                                            {{/if}}
                                         </h2>
                                     </article>
                                 </div>
