--- a/production/imports/ui/pages/dashboard.html
+++ b/production/imports/ui/pages/dashboard.html
@@ -28,24 +28,37 @@
                     {{#each post}}
                         {{#if noImage}}
                             <div class="editor-options new-post draft-inline">
-                                <div class="content-preview">
-                                    <h4 class="draft-title">{{headline}}</h4>
-                                    <p class="meta">{{writer}} | {{startDate}} - {{endDate}} | Tags: {{tags}} | Category: ... | </p>
-                                    <p class="draft-body">{{content}}</p>
-                                    <button class="btn btn-approve"><i class="fa fa-check"></i> Approve</button>
-                                    <button class="btn btn-reject"><i class="fa fa-times"></i> Reject</button>
+                                <div>
+                                    <div class="content-preview">
+                                        <h4 class="draft-title">{{headline}}</h4>
+                                        <p class="meta">{{writer}} | {{startDate}} - {{endDate}} | Tags: {{tags}} | Category: ... | </p>
+                                        <p class="draft-body">{{content}}</p>
+                                    </div>
+                                    <div class="operations">
+                                        <button class="btn btn-approve"><i class="fa fa-check"></i> Approve</button>
+                                        <button class="btn btn-reject"><i class="fa fa-times"></i> Reject</button>
+                                    </div>
                                 </div>
                             </div>
                         {{else}}
                             <div class="editor-options new-post with-image draft-inline">
-                                <div class="image-preview">
-                                    <img src="{{imageLink}}" class="img-responsive">
-                                </div>
-                                <div class="content-preview">
-                                    <h3 class="draft-title">{{headline}}</h3>
-                                    <p class="meta">{{writer}} | {{startDate}} - {{endDate}} | Tags: {{tags}} | Category: ... | </p>
-                                    <button class="btn btn-approve"><i class="fa fa-check"></i> Approve</button>
-                                    <button class="btn btn-reject"><i class="fa fa-times"></i> Reject</button>
+                                <div>
+                                    <div class="flexed mb-15">
+                                        <div class="image-preview">
+                                            <img src="{{imageLink}}" class="img-responsive">
+                                        </div>
+                                        <div class="content-preview">
+                                            <h3 class="draft-title">{{headline}}</h3>
+                                            <p class="meta">{{writer}} | {{startDate}} - {{endDate}} | Tags: {{tags}} | Category: ... | </p>
+                                            {{#if hasContent}}
+                                                <p class="draft-body">{{content}}</p>
+                                            {{/ if}}
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <button class="btn btn-approve"><i class="fa fa-check"></i> Approve</button>
+                                        <button class="btn btn-reject"><i class="fa fa-times"></i> Reject</button>
+                                    </div>
                                 </div>
                             </div>
                         {{/ if}}
@@ -66,76 +79,14 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
+                <div class="dash-item text-center">
+                    <h3>All users</h3>
+                    <p>Use the tool bellow to filter and search for users</p>
+                </div>
+            </div>
+            <div class="col-lg-12">
                 <div class="dash-item">
-                    <h3 class="text-center">
-                        New Posts
-                        <hr>
-                    </h3>
-                    <div class="editor-options draft-inline">
-                        <div class="content-preview">
-                            <h4 class="draft-title">This is an example of draft item with no images</h4>
-                            <p class="meta">Yonglin Wang | Dec 24th, 2017 | Tags: Test, Nice Tag, Wow... | Category: ... | </p>
-                            <p class="draft-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam asperiores aut beatae ea eaque earum enim excepturi fuga in, ipsa laborum nobis obcaecati optio quam repellat sed tempora veniam!</p>
-                            <button class="btn btn-approve"><i class="fa fa-check"></i> Approve</button>
-                            <button class="btn btn-reject"><i class="fa fa-times"></i> Reject</button>
-                        </div>
-                    </div>
-                    <hr />
-                    <div class="editor-options draft-inline">
-                        <div class="content-preview">
-                            <h4 class="draft-title">This is an example of draft item with no images</h4>
-
-                            <p class="meta">Yonglin Wang | Dec 24th, 2017 | Tags: Test, Nice Tag, Wow... | Category: ... | </p>
-                            <p class="draft-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam asperiores aut beatae ea eaque earum enim excepturi fuga in, ipsa laborum nobis obcaecati optio quam repellat sed tempora veniam!</p>
-                            <button class="btn btn-approve"><i class="fa fa-check"></i> Approve</button>
-                            <button class="btn btn-reject"><i class="fa fa-times"></i> Reject</button>
-                        </div>
-                    </div>
-                    <hr />
-                    <div class="editor-options draft-inline">
-                        <div class="content-preview">
-                            <h4 class="draft-title">This is an example of draft item with no images</h4>
-
-                            <p class="meta">Yonglin Wang | Dec 24th, 2017 | Tags: Test, Nice Tag, Wow... | Category: ... | </p>
-                            <p class="draft-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam asperiores aut beatae ea eaque earum enim excepturi fuga in, ipsa laborum nobis obcaecati optio quam repellat sed tempora veniam!</p>
-                            <button class="btn btn-approve"><i class="fa fa-check"></i> Approve</button>
-                            <button class="btn btn-reject"><i class="fa fa-times"></i> Reject</button>
-                        </div>
-                    </div>
-                    <hr />
-                    <div class="editor-options draft-inline">
-                        <div class="content-preview">
-                            <h4 class="draft-title">This is an example of draft item with no images</h4>
-
-                            <p class="meta">Yonglin Wang | Dec 24th, 2017 | Tags: Test, Nice Tag, Wow... | Category: ... | </p>
-                            <p class="draft-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam asperiores aut beatae ea eaque earum enim excepturi fuga in, ipsa laborum nobis obcaecati optio quam repellat sed tempora veniam!</p>
-                            <button class="btn btn-approve"><i class="fa fa-check"></i> Approve</button>
-                            <button class="btn btn-reject"><i class="fa fa-times"></i> Reject</button>
-                        </div>
-                    </div>
-                    <hr />
-                    <div class="editor-options draft-inline">
-                        <div class="content-preview">
-                            <h4 class="draft-title">This is an example of draft item with no images</h4>
-
-                            <p class="meta">Yonglin Wang | Dec 24th, 2017 | Tags: Test, Nice Tag, Wow... | Category: ... | </p>
-                            <p class="draft-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam asperiores aut beatae ea eaque earum enim excepturi fuga in, ipsa laborum nobis obcaecati optio quam repellat sed tempora veniam!</p>
-                            <button class="btn btn-approve"><i class="fa fa-check"></i> Approve</button>
-                            <button class="btn btn-reject"><i class="fa fa-times"></i> Reject</button>
-                        </div>
-                    </div>
-                    <hr />
-                    <div class="editor-options draft-inline">
-                        <div class="content-preview">
-                            <h4 class="draft-title">This is an example of draft item with no images</h4>
-
-                            <p class="meta">Yonglin Wang | Dec 24th, 2017 | Tags: Test, Nice Tag, Wow... | Category: ... | </p>
-                            <p class="draft-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam asperiores aut beatae ea eaque earum enim excepturi fuga in, ipsa laborum nobis obcaecati optio quam repellat sed tempora veniam!</p>
-                            <button class="btn btn-approve"><i class="fa fa-check"></i> Approve</button>
-                            <button class="btn btn-reject"><i class="fa fa-times"></i> Reject</button>
-                        </div>
-                    </div>
-                    <hr />
+                    <img class="img-circle" src="{{testProfile}}"><p>Yonglin Wang</p>
                 </div>
             </div>
         </div>
@@ -148,12 +99,12 @@
         <a href="logout" class="logout-btn">LOG OUT</a>
     </div>
     <div class="side-nav-body">
-        <a href="dash-home"><i class="fa fa-home"></i> Home</a>
+        <a href="/dashboard"><i class="fa fa-home"></i> Home</a>
         <a href=""><i class="fa fa-bullhorn"></i> Announcements</a>
         <a href=""><i class="fa fa-file-text-o"></i> Posts</a>
         <a href=""><i class="fa fa-pencil-square-o"></i> View Suggestions</a>
         <a href=""><i class="fa fa-list"></i> Manage Categories</a>
-        <a href=""><i class="fa fa-group"></i> Manage Users</a>
+        <a href="/dashboard/users"><i class="fa fa-group"></i> Manage Users</a>
         <a href=""><i class="fa fa-newspaper-o"></i> Newsletters</a>
         <a href=""><i class="fa fa-gear"></i> Settings</a>
     </div>
