--- a/production/imports/ui/pages/stream.html
+++ b/production/imports/ui/pages/stream.html
@@ -4,8 +4,10 @@
     <div class="container main">
         <div class="col-lg-12 content">
             <div class="button-group filter-button-group mb-30">
-                <button class="filter-btn is-checked" data-filter="*" data-tooltip="I'm a tooltip!">ALL</button>
-                <button class="filter-btn" data-filter=".a">Test A</button>
+                <button class="filter-btn is-checked" data-filter="*">ALL</button>
+                {{#each category}}
+                    <button class="filter-btn" data-filter=".{{name}}">{{name}}</button>
+                {{/each}}
                 <button class="filter-btn" data-filter=".b">Test B</button>
                 <button class="filter-btn" data-filter=".image">Images</button>
             </div>
@@ -14,7 +16,7 @@
                 <div class="gutter-sizer"></div>
                 {{#each allPosts}}
                     {{#if isImageOnly}}
-                        <div class="grid-item image">
+                        <div class="grid-item {{categories}}">
                             <div class="item-container">
                                 <img class="img-responsive" src="{{imageLink}}" />
                                 <div class="overlay-small">
@@ -32,7 +34,7 @@
                         </div>
                     {{/ if}}
                     {{#if isTextOnly}}
-                        <div class="grid-item a">
+                        <div class="grid-item {{categories}}">
                             <div class="post-title mb-10">
                                 <h3>{{headline}}</h3>
                             </div>
@@ -44,7 +46,7 @@
                     {{/ if}}
                     {{#if isImageText}}
                         {{#if imageOverText}}
-                            <div class="grid-item image">
+                            <div class="grid-item {{categories}}">
                                 <div class="item-container">
                                     <img src="{{imageLink}}" alt="Test Image" class="item-image">
                                     <div class="overlay">
@@ -58,7 +60,7 @@
                             </div>
                         {{/ if}}
                         {{#if textOverImage}}
-                            <div class="grid-item image text-over-image" style="background: url({{imageLink}})">
+                            <div class="grid-item {{categories}} text-over-image" style="background: url({{imageLink}})">
                                 <div class="overlay-partial">
                                     <div class="post-title mb-10">
                                         <h3>{{headline}}</h3>
@@ -70,7 +72,7 @@
                         {{/ if}}
                     {{/ if}}
                     {{#if isBlog}}
-                        <div class="grid-item image blog-item" id="{{_id}}">
+                        <div class="grid-item {{categories}} blog-item" id="{{_id}}">
                             <img class="img-responsive" src="{{imageLink}}" />
                             <div class="grid-blog-body">
                                 <h3>{{title}}</h3>
